--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -13,3 +13,4 @@ jobs:
       - uses: DenverCoder1/github-readme-youtube-cards@main
         with:
           channel_id: UC5dVxwIGl4xfY4gjkWuMspA
+          readme_path: profile/README.md
